[package]
name = "fisher_processor"
version = "0.1.0"
license = "GPL-3.0"

description = "Processor of the Fisher crate"
authors = ["Pietro Albini <pietro@pietroalbini.org>"]

repository = "https://github.com/pietroalbini/fisher"

[dependencies]

fisher_common = { version="^0.1", path="../fisher_common" }
